[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/StarryBackground.gd" type="Script" id=1]

[node name="StarryBackground" type="ParallaxBackground"]
script = ExtResource( 1 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.8, 0.8 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.6, 0.6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -1, 0 )
z_index = -3
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -5130, -5004, 4946, -4988, 4968, 4606, -5146, 4583 )
